// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingSheet Snapshots renders correctly with createWallet=false (import mode) 1`] = `
<View
  testID="bottom-sheet-mock"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 16,
        "rowGap": 16,
      }
    }
    testID="onboarding-sheet"
  >
    <View
      style={
        {
          "flexDirection": "column",
          "gap": 16,
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderColor": "#b7bbc866",
            "borderRadius": 12,
            "borderWidth": 1,
            "color": "#ffffff",
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="onboarding-sheet-google-login-button-id"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            }
          }
        >
          <SvgMock
            fill="currentColor"
            height={24}
            name="google"
            width={24}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Sign in with Google
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderColor": "#b7bbc866",
            "borderRadius": 12,
            "borderWidth": 1,
            "color": "#ffffff",
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="onboarding-sheet-apple-login-button-id"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            }
          }
        >
          <SvgMock
            fill="currentColor"
            height={24}
            name="apple-white"
            width={24}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Sign in with Apple
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 10,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#b7bbc866",
            "flex": 1,
            "height": 1,
          }
        }
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#b7bbc8",
            "fontFamily": "Geist-Medium",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        or
      </Text>
      <View
        style={
          {
            "backgroundColor": "#b7bbc866",
            "flex": 1,
            "height": 1,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "gap": 16,
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="onboarding-sheet-import-seed-button-id"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Import using Secret Recovery Phrase
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 24,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 12,
            "letterSpacing": 0.25,
            "lineHeight": 20,
            "textAlign": "center",
          }
        }
      >
        By continuing, you agree to MetaMask's
         
        <Text
          accessibilityRole="text"
          onPress={[Function]}
          style={
            {
              "color": "#4459ff",
              "fontFamily": "Geist-Medium",
              "fontSize": 12,
              "letterSpacing": 0.25,
              "lineHeight": 20,
            }
          }
          suppressHighlighting={true}
          testID="terms-of-use-link"
        >
          Terms of use
        </Text>
         
        and
         
        <Text
          accessibilityRole="text"
          onPress={[Function]}
          style={
            {
              "color": "#4459ff",
              "fontFamily": "Geist-Medium",
              "fontSize": 12,
              "letterSpacing": 0.25,
              "lineHeight": 20,
            }
          }
          suppressHighlighting={true}
          testID="privacy-notice-link"
        >
          Privacy notice
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`OnboardingSheet Snapshots renders correctly with createWallet=true (create mode) 1`] = `
<View
  testID="bottom-sheet-mock"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 16,
        "rowGap": 16,
      }
    }
    testID="onboarding-sheet"
  >
    <View
      style={
        {
          "flexDirection": "column",
          "gap": 16,
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderColor": "#b7bbc866",
            "borderRadius": 12,
            "borderWidth": 1,
            "color": "#ffffff",
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="onboarding-sheet-google-login-button-id"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            }
          }
        >
          <SvgMock
            fill="currentColor"
            height={24}
            name="google"
            width={24}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Continue with Google
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderColor": "#b7bbc866",
            "borderRadius": 12,
            "borderWidth": 1,
            "color": "#ffffff",
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="onboarding-sheet-apple-login-button-id"
      >
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            }
          }
        >
          <SvgMock
            fill="currentColor"
            height={24}
            name="apple-white"
            width={24}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Continue with Apple
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 10,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#b7bbc866",
            "flex": 1,
            "height": 1,
          }
        }
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#b7bbc8",
            "fontFamily": "Geist-Medium",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        or
      </Text>
      <View
        style={
          {
            "backgroundColor": "#b7bbc866",
            "flex": 1,
            "height": 1,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "gap": 16,
          "justifyContent": "flex-end",
          "width": "100%",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="onboarding-sheet-import-seed-button-id"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Use Secret Recovery Phrase
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 24,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 12,
            "letterSpacing": 0.25,
            "lineHeight": 20,
            "textAlign": "center",
          }
        }
      >
        By continuing, you agree to MetaMask's
         
        <Text
          accessibilityRole="text"
          onPress={[Function]}
          style={
            {
              "color": "#4459ff",
              "fontFamily": "Geist-Medium",
              "fontSize": 12,
              "letterSpacing": 0.25,
              "lineHeight": 20,
            }
          }
          suppressHighlighting={true}
          testID="terms-of-use-link"
        >
          Terms of use
        </Text>
         
        and
         
        <Text
          accessibilityRole="text"
          onPress={[Function]}
          style={
            {
              "color": "#4459ff",
              "fontFamily": "Geist-Medium",
              "fontSize": 12,
              "letterSpacing": 0.25,
              "lineHeight": 20,
            }
          }
          suppressHighlighting={true}
          testID="privacy-notice-link"
        >
          Privacy notice
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
